--- a/pages/calcular.html
+++ b/pages/calcular.html
@@ -379,11 +379,7 @@
               <div class="col-lg-3 mt-5">
                 <label class="text-dark font-weight-bold"> Profundidad efectiva <span class="text-dark opacity-6">(cm)</span></label>
                 <div class="input-group input-group-static">
-<<<<<<< HEAD
                   <input type="number" class="form-control" id="profundidad" placeholder="complete este campo" aria-label="complete este campo">
-=======
-                  <input type="number" class="form-control" value="75" placeholder="Medida en cm" aria-label="complete este campo">
->>>>>>> 85eb94e43b46d3ed54a4928afdd467bb122df2a1
                 </div>
               </div>
               <!-- .......... -->
@@ -603,8 +599,8 @@
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
   <script src="../assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
-  <script src="../assets/js/menu_global.js"></script>
   <script src="../assets/js/calculos/calcular-proceso.js"></script>
+  <script src="../assets/js/calculos/procesos_simples.js"></script>
 </body>
 
 </html>
