--- a/pages/papelera/ahhaha.html
+++ b/pages/papelera/ahhaha.html
@@ -1,105 +1,49 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activar/Desactivar Animaciones</title>
-    <style>
-        /* Estilos para el div que se tambalea */
-        .tambaleo {
-            perspective: 1000px; /* Proporciona profundidad al efecto 3D */
-        }
-        .tamb1{
-            animation: tambaleoAnim;
-            width: 100px;
-            height: 100px;
-            background-color: red;
-            margin: 2px;
-            transform-origin: center top;
-        }
-        .tamb2{
-            animation: tambaleoAnim2;
-            width: 100px;
-            height: 100px;
-            background-color: rgb(13, 0, 255);
-            margin: 2px;
-            transform-origin: center left;
-        }
-
-        /* Animación de tambaleo utilizando keyframes */
-        @keyframes tambaleoAnim {
-            0%, 100% {
-                transform: rotateZ(10deg);
-            }
-            60% {
-                transform: rotateZ(10deg) translateZ(9px); /* Movimiento 3D hacia atrás */
-            }
-            40% {
-                transform: rotateZ(2deg) translateX(80px); /* Movimiento 3D hacia atrás */
-            }
-            20% {
-                transform: rotateZ(1deg) translateZ(2px); /* Movimiento 3D hacia atrás */
-            }
-        }
-
-        /* Otra animación de tambaleo utilizando keyframes */
-        @keyframes tambaleoAnim2 {
-            0%, 100% {
-                transform: rotateZ(0deg);
-            }
-            60% {
-                transform: rotateZ(3deg) translateZ(-9px); /* Movimiento 3D hacia atrás */
-            }
-            40% {
-                transform: rotateZ(-2deg) translateZ(-8px); /* Movimiento 3D hacia atrás */
-            }
-            20% {
-                transform: rotateX(-1deg) translateX(-2px); /* Movimiento 3D hacia atrás */
-            }
-        }
-
-        /* Clase para animación inactiva */
-        .animacion-inactiva {
-            animation: none !important;
-        }
-
-        /* Clase para activar la animación */
-        .animacion-activada {
-            animation: tambaleoAnim 2s infinite alternate ease-in-out;
-        }
-
-        /* Clase para activar la segunda animación */
-        .animacion-activada2 {
-            animation: tambaleoAnim2 2s infinite alternate ease-in-out;
-        }
-    </style>
+    <title>Pisos Térmicos</title>
 </head>
 <body>
-    <div class="tambaleo tamb1 animacion-inactiva" id="tambaleo1"></div>
-    <div class="tambaleo tamb2 animacion-inactiva" id="tambaleo2"></div>
+    <form onsubmit="return false;">
 
-    <button id="toggleButton">Activar / Desactivar Animaciones</button>
+        <h2>Calculadora de Pisos Térmicos</h2>
+        <label for="altura">Altura (m): </label>
+        <input type="number" id="altura" step="any"><br>
+
+        <label for="temperatura">Temperatura (°C): </label>
+        <input type="number" id="temperatura" step="any"><br>
+
+        <button onclick="calcularPisoTermico()">Calcular Piso Térmico</button>
+    </form>
+    
+
+    <h3>Resultado:</h3>
+    <input type="text" id="resultado" readonly>
 
     <script>
-        var toggleButton = document.getElementById('toggleButton');
-        var isAnimating = false;
+        function calcularPisoTermico() {
+            let altura = parseFloat(document.getElementById('altura').value);
+            let temperatura = parseFloat(document.getElementById('temperatura').value);
+            let resultado = document.getElementById('resultado');
 
-        toggleButton.addEventListener('click', function() {
-            var tambaleoElements = document.querySelectorAll('.tambaleo');
-            if (!isAnimating) {
-                tambaleoElements.forEach(function(element) {
-                    element.classList.remove('animacion-inactiva');
-                    element.classList.add('animacion-activada', 'animacion-activada2');
-                });
-                isAnimating = true;
+            if (altura <= 1000 && temperatura > 24) {
+                resultado.value = `Piso termico: Cálido`;
+            } else if (altura <= 2000 && temperatura >= 18 && temperatura <= 24) {
+                resultado.value = `Piso termico: Templado`;
+            } else if (altura <= 3000 && temperatura >= 12 && temperatura <= 18) {
+                resultado.value = `Piso termico: Frío`;
+            } else if (altura <= 3600 && temperatura >= 8 && temperatura <= 12) {
+                resultado.value = `Piso termico: Muy frío`;
+            } else if (altura <= 4200 && temperatura >= 4 && temperatura <= 8) {
+                resultado.value = `Piso termico: Extremadamente frío`;
+            } else if (altura <= 4700 && temperatura >= 1.5 && temperatura <= 4) {
+                resultado.value = `Piso termico: Subnival`;
+            } else if (altura > 4700 && temperatura < 1.5) {
+                resultado.value = `Piso termico: Nival`;
             } else {
-                tambaleoElements.forEach(function(element) {
-                    element.classList.remove('animacion-activada', 'animacion-activada2');
-                    element.classList.add('animacion-inactiva');
-                });
-                isAnimating = false;
+                resultado.value = `Escriba datos concretos`;
             }
-        });
+        }
     </script>
 </body>
 </html>
