picos termicos, modales, localstorage

--- a/pages/calculos/calcular_fertilidad.html
+++ b/pages/calculos/calcular_fertilidad.html
@@ -538,7 +538,7 @@
               <div class="row fila">
                 <div id="idboton">
                   <!-- boton principal -->
-                  <a href="../calcular.html"><button class="btn btn-outline-success " onclick="exportarResultado()">volver</button></a>
+                  <a href="../calcular.html"><button class="btn btn-outline-success ">volver</button></a>
                   <input type="button" value="Calcular fertilidad" class="btn bg-gradient-success justify-content-center" onclick="calcularFT()">
                 </div>
               </div>
@@ -546,7 +546,7 @@
 
             <!-- botones que salen en al calcular -->
             <div id="exportarBtn" class="justify-content-center text-center mt-3" style="display: none;">
-              <a href="../calcular.html"><button class="btn btn-outline-success " onclick="exportarResultado()">volver</button></a>
+              <a href="../calcular.html"><button class="btn btn-outline-success ">volver</button></a>
               <input type="button" value="Calcular Fertilidad" class="btn bg-gradient-success " onclick="calcularFT()">
             </div>
 
