arreglo de los inpus de calcular proceso

--- a/pages/papelera/index.html
+++ b/pages/papelera/index.html
@@ -1,4 +1,4 @@
-<!-- Página 1: index.html -->
+<!-- Página 1: index.html
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -20,4 +20,4 @@
     <button onclick="generarResultado()">Generar Resultado</button>
 </body>
 <script src="../assets/js/calculos/calculo_fertil.js"></script>
-</html>
+</html> -->
