--- a/pages/papelera/otra_pagina.html
+++ b/pages/papelera/otra_pagina.html
@@ -1,4 +1,4 @@
-<!-- Página 2: otra_pagina.html -->
+<!-- Página 2: otra_pagina.html
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -18,4 +18,4 @@
         document.getElementById("resultado").value = resultado;
     </script>
 </body>
-</html>
+</html> -->
