--- a/pages/papelera/resultado.html
+++ b/pages/papelera/resultado.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Resultado Piso Térmico</title>
@@ -17,4 +17,4 @@
         resultadoPisosTermicos.value = decodeURIComponent(pisoTermico);
     </script>
 </body>
-</html>
+</html> -->
