--- a/pages/papelera/prueba.html
+++ b/pages/papelera/prueba.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Pisos Térmicos</title>
@@ -18,4 +18,4 @@
 
     <script src="../../assets/js/calculos/procesos_simples.js"></script>
 </body>
-</html>
+</html> -->
