ajuste div fertilidad

--- a/pages/calculos/calcular_fertilidad.html
+++ b/pages/calculos/calcular_fertilidad.html
@@ -180,7 +180,7 @@
     <!-- CARD -->
 
 
-    <section class="row mb-4 card opacity-9">
+    <section class="row card opacity-9">
       <div class="container-fluid">
         <div class="row">
           <div class="col-10 mx-auto border-radius-lg">
@@ -276,7 +276,7 @@
 
         <!-- CARD NUMERO 1 -->
         
-          <div class="tambaleo col-lg-6">
+          <div class="tambaleo mt-4 col-lg-6">
             <div class="col p-5 card opacity-9">
               <div class="container">
                 <div class="mt-n6 w-2" style="background-color: #cccccc;height: 40px; border: 1px solid rgb(0, 0, 0); float: left; border-radius: 7px;"></div>
@@ -328,12 +328,6 @@
                     </div>
                   </div>
                   <!-- .......... -->
-                  <!-- <div class="col-6">
-                    <label for="ClimaCarbono" class="text-dark mb-n3 mt-3 ms-n1 font-weight-bold">Clima carbono</label>
-                    <div class="input-group input-group-static">
-                      <input type="text" name="ClimaCarbono" id="ClimaCarbono" value="" class="form-control mt-n2">
-                    </div>
-                  </div> -->
 
                   <div class="col-6">
                     <div class="input-group input-group-static">
@@ -391,7 +385,7 @@
           
 
         <!-- CARD NUMERO 2 -->
-        <div class="tambaleo col-lg-6 ">
+        <div class="tambaleo mt-4 col-lg-6 ">
           <div class="col p-5 card opacity-9">
             <div class="container">
               <div class="mt-n6 w-2" style="background-color: #cccccc;height: 40px; border: 1px solid rgb(0, 0, 0); float: left; border-radius: 7px;"></div>
@@ -443,15 +437,21 @@
                   </div>
                 </div>
                 <!-- .......... -->
+
                 <div class="col-6">
-                  <label for="ClimaCarbono" class="text-dark mb-n3 mt-3 ms-n1 font-weight-bold">Clima carbono</label>
                   <div class="input-group input-group-static">
-                    <input type="text" name="ClimaCarbono2" id="ClimaCarbono2" value="" class="form-control mt-n2">
+                    <label for="ClimaCarbono" class="text-dark mb-n3 mt-3 ms-n1 font-weight-bold">Clima carbono</label>
+                    <select name="ClimaCarbono2" id="ClimaCarbono2" class="form-select form-select-lg form-control mt-2" >
+                      <option> selecciona </option>
+                      <option value="CALIENTE">CALIENTE</option>
+                      <option value="CALIDO">CALIDO</option>
+                      <option value="FRIO">FRIO</option>
+                    </select>
                   </div>
                 </div>
                 <!-- .......... -->
                 <div class="col-6">
-                  <label for="CarbonoOrganico" class="text-dark mb-n3 mt-3 ms-n1 font-weight-bold">Cárbono orgánico:</label>
+                  <label for="CarbonoOrganico" class="text-dark mb-2 mt-3 ms-n1 font-weight-bold">Cárbono orgánico:</label>
                   <div class="input-group input-group-static">
                     <input type="number" name="CarbonoOrganico2" id="CarbonoOrganico2" value="" class="form-control mt-n2">
                   </div>
