--- a/pages/calculos/calcular_fertilidad.html
+++ b/pages/calculos/calcular_fertilidad.html
@@ -185,57 +185,13 @@
         <div class="row">
           <div class="col-10 mx-auto border-radius-lg">
             <div class="row">
-              <h3 class="text-center mt-2 animate-text" id="animate-text1">Cálculo de la fertilidad del suelo.</h4>
+              <h3 class="text-center mt-2" id="animate-text1">Cálculo de la fertilidad del suelo.</h4>
 
-              <div class="form-check form-switch mt-n5 d-flex align-items-center is-filled">
+              <!-- <div class="form-check form-switch mt-n5 d-flex align-items-center is-filled">
                 <input class="form-check-input" type="checkbox" id="toggleButton" >
                 <label class="form-check-label ms-3 mb-0" for="flexSwitchCheckDefault">Modo Drone</label>
-              </div>
+              </div> -->
                 
-              <!-- Estilos de animacion de texto -->
-              <style>
-                .animate-text {
-                  letter-spacing: 0.075rem;
-                }
-
-                /*Para Planear el cursor del teclado usamos la siguiente pseudoclase con una animación que pueden ver en la parte final del código CSS*/
-                .animate-text::after {
-                  content: "|";
-                  font-size: 1.6rem;
-                  font-family: "Inconsolata", monospace;
-                  animation-name: parpadeo;
-                  animation-duration: 1s;
-                  animation-timing-function: linear;
-                  animation-iteration-count: infinite;
-                }
-
-                .zoom {
-                  animation: zoom 8s 0s;
-                }
-
-                /*Esta animación imita el parpadeo del cursor del teclado*/
-                @keyframes parpadeo {
-                  0% {
-                    opacity: 1;
-                  }
-
-                  20% {
-                    opacity: 1;
-                  }
-
-                  25% {
-                    opacity: 0;
-                  }
-
-                  90% {
-                    opacity: 0;
-                  }
-
-                  100% {
-                    opacity: 1;
-                  }
-                }
-              </style>
               <!-- Escript de animacion de texto -->
               <script>
                 //Primero capturamos el elemento del DOM con el id que definimos en el html
@@ -537,7 +493,7 @@
             </div>
             
             <!-- resultado -->
-            <div id="resultado" class="justify-content-center text-center">
+            <div id="resultadoFertilidad" class="justify-content-center text-center">
               <div class="row fila">
                 <div id="idboton">
                   <!-- boton principal -->
@@ -661,7 +617,8 @@
 
   <script src="../../assets/js/calculos/fertilidad.js"></script>
   <script src="../../assets/js/animaciones/tambaleo.js"></script>
-  <script src="../../assets/js/localstorage/localstorage.js"></script>
+  <script src="../../assets/js/localstorage.js"></script>
+  <script src="../../assets/js/config.js"></script>
 
 </body>
 
