--- a/pages/calculos/pisos_termicos.html
+++ b/pages/calculos/pisos_termicos.html
@@ -103,7 +103,7 @@
             <div  class="justify-content-center text-center">
               <div class="row fila">
                 <div class="col justify-content-center text-center my-3">
-              <input type="text" id="resultado" class="text-center text-2xl form-control mt-n2" readonly>
+              <input type="text" id="resultadoPisosTermicos" class="text-center text-2xl form-control mt-n2" readonly>
             </div>
                 
               </div>
