--- a/pages/calculos/pisos_termicos.html
+++ b/pages/calculos/pisos_termicos.html
@@ -19,7 +19,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="../../assets/img/logo_maiz.png">
   <link rel="icon" type="image/png" href="../../assets/img/logo_maiz.png">
   <title>
-    Cálculo de fertilidad
+    Pisos Termicos
   </title>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css"
