--- a/index.html
+++ b/index.html
@@ -583,6 +583,7 @@
 <!--  Google Maps Plugin    -->
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="./assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
 
 
