--- a/pages/calculos/calcular_fertilidad.html
+++ b/pages/calculos/calcular_fertilidad.html
@@ -40,6 +40,13 @@
   <!-- Boxicons CSS -->
   <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="../../assets/css/menu_global.css">
+
+  <script src="
+  https://cdn.jsdelivr.net/npm/sweetalert2@11.7.28/dist/sweetalert2.all.min.js
+  "></script>
+  <link href="
+  https://cdn.jsdelivr.net/npm/sweetalert2@11.7.28/dist/sweetalert2.min.css
+  " rel="stylesheet">
   
 </head>
 
@@ -290,8 +297,8 @@
                       <label for="ClimaCarbono" class="text-dark mb-n3 mt-3 ms-n1 font-weight-bold">Clima carbono</label>
                       <select name="ClimaCarbono" id="ClimaCarbono" class="form-select form-select-lg form-control mt-2" >
                         <option> selecciona </option>
-                        <option value="CALIENTE">CALIENTE</option>
                         <option value="CALIDO">CALIDO</option>
+                        <option value="MEDIO">MEDIO</option>
                         <option value="FRIO">FRIO</option>
                       </select>
                     </div>
@@ -399,8 +406,8 @@
                     <label for="ClimaCarbono" class="text-dark mb-n3 mt-3 ms-n1 font-weight-bold">Clima carbono</label>
                     <select name="ClimaCarbono2" id="ClimaCarbono2" class="form-select form-select-lg form-control mt-2" >
                       <option> selecciona </option>
-                      <option value="CALIENTE">CALIENTE</option>
                       <option value="CALIDO">CALIDO</option>
+                      <option value="MEDIO">MEDIO</option>
                       <option value="FRIO">FRIO</option>
                     </select>
                   </div>
