--- a/pages/calcular.html
+++ b/pages/calcular.html
@@ -65,7 +65,7 @@
 </head>
 <body class="blog-author"
   style="background-image: url('../assets/img/fondobg.png'); background-size: cover; background-repeat: no-repeat;background-attachment: fixed">
-  <video src="../assets/img/video (1).mp4" autoplay="true" muted="true" loop="true" poster="../assets/img/fondos\ \(1\).jpg"></video>
+  <video src="../assets/img/videobg.mp4" autoplay="true" muted="true" loop="true" poster="../assets/img/fondos\ \(1\).jpg"></video>
 
   <style>
     video {
@@ -178,7 +178,7 @@
 
      <!-- modal -->
      <div id="modalContPisosTermicos" class="modal_calculo  animacion_modal">
-      <div class="modal-content_calculo col-8">
+      <div class="modal-content_calculo modal_responsive">
         <button onclick="closed()" class="btn btn-sm close_calculo text-white bg-gradient-dark">&times;</button>
         <iframe class="iframe_calculo" id="modalFramePisosTermicos" ></iframe>
       </div>
@@ -472,6 +472,7 @@
   <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="../assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
   <script src="../assets/js/calculos/calcular-proceso.js"></script>
   <script src="../assets/js/calculos/procesos_simples.js"></script>
