--- a/pages/papelera/plantilla.html
+++ b/pages/papelera/plantilla.html
@@ -372,6 +372,7 @@
   <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="../../assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
 
 </body>
