--- a/pages/calcular.html
+++ b/pages/calcular.html
@@ -65,7 +65,7 @@
 </head>
 <body class="blog-author"
   style="background-image: url('../assets/img/fondobg.png'); background-size: cover; background-repeat: no-repeat;background-attachment: fixed">
-  <video src="../assets/img/videobg.mp4" autoplay="true" muted="true" loop="true" poster="../assets/img/fondos\ \(1\).jpg"></video>
+  <video src="../assets/img/video (1).mp4" autoplay="true" muted="true" loop="true" poster="../assets/img/fondobg.png"></video>
 
   <style>
     video {
@@ -222,7 +222,7 @@
                   </div>
                 </div>
 
-                <!-- .......... -->
+                <!-- .....Erosion hídrica ✔..... -->
                 <div class="col-lg-3 ms-3 me-3 mt-5">
                   <label class="text-dark font-weight-bold">Erosion hídrica
                     <span class="input-group-addon"><a id="openModalErosion"><i class="material-icons text-success">open_in_new</i></a></span>
@@ -232,7 +232,7 @@
                   </div>
                 </div>
 
-                <!-- .......... -->
+                <!-- .....Movimiento de masa ✔..... -->
                 <div class="col-lg-3 ms-3 me-3 mt-5">
                   <label class="text-dark font-weight-bold"> Movimiento de masa
                     <span class="input-group-addon"><a id="openModalMovMasa"><i class="material-icons text-success">open_in_new</i></a></span>
@@ -271,7 +271,9 @@
                 </div>
                 <!-- .......... -->
                 <div class="col-lg-3 ms-3 me-3 mt-5">
-                  <label class="text-dark font-weight-bold"> Textura</label>
+                  <label class="text-dark font-weight-bold"> Textura
+                    <span class="input-group-addon"><a href="calculos/textura.html"><i class="material-icons text-success">open_in_new</i></a></span>
+                  </label>
                   <div class="input-group input-group-static">
                     <input type="number" class="form-control" id="textura" placeholder="complete este campo" aria-label="complete este campo">
                   </div>
@@ -290,7 +292,7 @@
                     <input type="number" class="form-control" id="afloramiento" placeholder="complete este campo" aria-label="complete este campo">
                   </div>
                 </div>
-                <!-- .......... -->
+                <!-- .....Fertilidad ✔..... -->
                 <div class="col-lg-3 ms-3 me-3 mt-5">
                   <label for="resultadoFertilidad" class="text-dark font-weight-bold"> Fertilidad 
                     <span class="input-group-addon"><a href="calculos/calcular_fertilidad.html"><i class="material-icons text-success">open_in_new</i></a></span>
@@ -341,7 +343,7 @@
                     <input type="number" class="form-control" id="distribucionLluvia" placeholder="complete este campo" aria-label="complete este campo">
                   </div>
                 </div>
-                <!-- .......... -->
+                <!-- .....Pisos termicos ✔..... -->
                 <div class="col-lg-3 ms-3 me-3 mt-5">
                   <label for="pisosTermicos" class="text-dark font-weight-bold">Pisos termicos 
                     <span class="input-group-addon"><a id="openModalPisosTermicos"><i class="material-icons text-success">open_in_new</i></a></span>
@@ -350,7 +352,6 @@
                     <input type="text" class="form-control bg-gray-200 " id="resultadoPisosTermicos" placeholder="complete este campo" aria-label="complete este campo" readonly>
                   </div>
                 </div>
-                
                 <!-- .......... -->
                 <div class="col-lg-3 ms-3 me-3 mt-5">
                   <label class="text-dark font-weight-bold">Condicion de humedad</label>
