--- a/pages/papelera/plantilla.html
+++ b/pages/papelera/plantilla.html
@@ -142,7 +142,7 @@
                   </ul>
                 </li>
                 <li class="nav-item ms-lg-auto">
-                  <a class="nav-link nav-link-icon me-2" href="../..//pages/calcular.html">
+                  <a class="nav-link nav-link-icon me-2" href="../../pages/calcular.html">
                     <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip"
                       data-bs-placement="bottom" title="Calcular">pag 4</p>
                   </a>
