resultado segun clase

--- a/pages/calculos/pisos_termicos.html
+++ b/pages/calculos/pisos_termicos.html
@@ -56,23 +56,23 @@
               <h3 class="text-center mt-2 ">Pisos Térmicos.</h4>
                 <form onsubmit="return false;">
                   <div class="container">
-                    <div class="row mb-4">
+                    <div class="row mb-4 justify-content-center">
         
-                      <div class="col mx-3">
+                      <div class="col-md-5 mt-2 mx-3">
                         <label for="altura" class="text-dark mb-n3 ms-n1 font-weight-bold">Altura 
                           <span class="text-dark opacity-6"> (s. n. m.)</span>
                         </label>
                         <div class="input-group input-group-static">
-                          <input type="number" id="altura" value="" placeholder="Digite" class="form-control mt-n2">
+                          <input type="number" id="altura" value="" placeholder="Complete este campo" class="form-control mt-n2" required>
                         </div>
                       </div>
                       <!-- .......... -->
-                      <div class="col mx-3">
+                      <div class="col-md-5 mt-2 mx-3">
                         <label for="temperatura" class="text-dark mb-n3 ms-n1 font-weight-bold">Temperatura
                           <span class="text-dark opacity-6"> (°C)</span>
                         </label>
                         <div class="input-group input-group-static">
-                          <input type="number" id="temperatura" value="" class="form-control mt-n2">
+                          <input type="number" id="temperatura" value="" placeholder="Complete este campo" class="form-control mt-n2" required>
                         </div>
                       </div>
         
