--- a/pages/calculos/calcular_textura.html
+++ b/pages/calculos/calcular_textura.html
@@ -331,8 +331,7 @@ La textura del suelo es un factor importante que determina la capacidad del suel
               margin: auto;
             }
 
-            .cls-1{stroke-miterlimit:10;}.texto_pieza{font-size:21.32px;font-family:MyriadPro-Regular, Myriad Pro; fill: white;text-shadow: 2px 2px 4px #000;
- }
+            .cls-1{stroke-miterlimit:10;}.texto_pieza{font-size:21.32px;font-family:MyriadPro-Regular, Myriad Pro; fill: white;text-shadow: 2px 2px 4px #000;}
 
             .base{
               z-index: 3;
@@ -357,8 +356,6 @@ La textura del suelo es un factor importante que determina la capacidad del suel
             .areno_francosa{top: 445px; left: 60.9px; width: 16rem;}
             .arenosa{top: 469.5px; left: 30px; width: 16.7rem;}
 
-
-            
           </style>
           
 
